2008-10-29  Perry McFarlane  <perry_m@fastmail.fm>
* afile.[ch], atari.c, sio.c:  Support .pro images
* ui.c: replace ^R in source with \022
* pbi_bb.c, pbi_mio.c: correct Util_filenamenotset error.
* mzpokeysnd.c, pokey.c, pokey.h: rename SKCTLS -> SKCTL


2008-10-13  Matthias Reichl  <hias@horus.com>
* pokey.c: fixed the ALLPOT register - it didn't work
  and there was an access outside array bounds


2008-09-21  Petr Stehlik  <pstehlik@sophics.cz>
* ui.c: visual configuration of keyboard joysticks layout, at long last!
  Currently for the SDL target only. Also default joystick mapping
  changed to num pad 4,8,6,5 + right ctrl and A,W,D,S + left ctrl keys.
  Feel free to set up your own mapping and then save the configuration.

* atari_sdl.c: removed keys for combined joystick directions (left+up, etc.)

* util.[ch]: safe_strncpy() added


2008-09-21  B Watson  <yalhcru@gmail.com>
* input.[ch]: "-directmouse" added (directly converting the mouse's absolute
  X/Y position to the POKEY pot. Used only for "-mouse pad", "-mouse koala",
  or "-mouse touch". The "-mousespeed" option does nothing when "-directmouse"
  is enabled.

* atari_sdl.c: mouse support ("-mouse xxx", "-mousespeed N") added, including
  the direct mouse support. Also adds a new "-grabmouse" command line option
  and a new keystroke, alt-M, to grab/ungrab the mouse.

* atari_x11.c: direct mouse support added


2008-09-17  Piotr Fusik  <fox@scene.pl>
* win32/msc/Makefile: added new source files


2008-09-17  B Watson  <yalhcru@gmail.com>
* configure.ac, monitor.c: --enable-readline option for the configure script
  - the monitor supports arrow keys (including up-arrow for command history),
  home/end, etc. using the "readline" library


2008-08-28  Perry McFarlane  <perry_m@fastmail.fm>
* javanvm/atari800.java: gain applet focus
* sio.h: remove Id tag
* xep80.c: XEP80_BlitGraphChar(int x, int y), add int before x and y
* pokeysnd.[ch], mzpokeysnd.c: SAMPBUF_MAX -> POKEYSND_SAMPBUF_MAX